# otis-web

./: .copier-answers.yml  .coverage  .flake8  .gcloudignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.mkd  DJANGO_DISCORDO_PACKAGE_GUIDE.md  Dockerfile  Dockerfile.dev  LICENSE  LICENSE.txt  Makefile  README.md  README.mkd  SECURITY.md  app.yaml  app.yaml.EXAMPLE  appengine_config.py  autofix.sh  bypass-lint.sh  calculator.py  claude.md  conftest.py  cors.json  db copy.sqlite3  deploy.sh  discordLogging.py  docker-compose.yml  env  erase-tmp.sh  factories.py  forms.py  lint.sh  main.py  manage.py  (+11 more)
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  conv-commit.yml  django-audit.yml  django-deploy.yml  django.yml  main.yml  pyright_to_rdjson.py
aincrad/: apps.py  tests.py  urls.py  views.py
arch/: 0001_initial_squashed_0032_alter_problem_puid.py  admin.py  apps.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
arch/migrations/: 0001_initial.py  0001_squashed_0032_alter_problem_puid.py  0002_auto_20210121_2112.py  0003_auto_20210121_2202.py  0004_auto_20210121_2250.py  0005_auto_20210122_0008.py  0006_auto_20210122_0021.py  0007_auto_20210122_0027.py  0008_auto_20210122_1155.py  0009_auto_20210122_1156.py  0010_auto_20210206_2200.py  0011_auto_20210314_1217.py  0012_auto_20210603_2343.py  0013_auto_20210603_2343.py  0014_remove_problem_group.py  0015_auto_20210604_0912.py  0016_auto_20210604_0915.py  0017_auto_20210604_1556.py  0018_auto_20210815_1731.py  0019_alter_problem_options.py  0020_auto_20210901_1835.py  0021_alter_problem_puid.py  0022_alter_problem_aops_url.py  0023_alter_problem_puid.py  0024_remove_problem_aops_url.py  0025_alter_hint_id_alter_problem_id.py  0026_alter_problem_puid.py  0027_problem_hyperlink.py  0028_vote.py  0029_alter_vote_niceness.py  0029_remove_vote_difficulty_vote_mohs.py  0030_alter_vote_niceness.py  0030_alter_vote_user.py  0031_alter_vote_mohs.py  0031_vote_created_at_vote_updated_at.py  0032_alter_problem_puid.py  0033_alter_hint_problem_alter_vote_created_at.py
core/: admin.py  apps.py  factories.py  forms.py  middleware.py  models.py  tests.py  urls.py  utils.py  views.py
core/fixtures/: testdata.yaml
core/migrations/: 0001_initial.py  0001_squashed_0054_userprofile_use_twemoji.py  0002_auto_20170805_2322.py  0003_auto_20170806_0009.py  0004_auto_20170808_1751.py  0005_unit_subject.py  0006_auto_20171205_0903.py  0007_semester_show_invoices.py  0008_semester_registration_open.py  0009_auto_20180423_1534.py  0010_auto_20180531_1217.py  0011_auto_20180531_1305.py  0012_auto_20190322_0810.py  0013_auto_20190809_1211.py  0014_auto_20190830_1219.py  0015_auto_20200314_1453.py  0016_auto_20200810_1725.py  0017_auto_20200810_1725.py  0018_auto_20200908_1307.py  0019_auto_20210403_1636.py  0020_auto_20210427_1624.py  0021_auto_20210427_1624.py  0022_auto_20210504_0951.py  0023_auto_20210712_2343.py  0024_alter_unitgroup_slug.py  0025_remove_semester_registration_open.py  0026_semester_uses_legacy_pset_system.py  0027_alter_semester_uses_legacy_pset_system.py  0028_alter_unit_group.py  0029_userprofile.py  0030_unitgroup_hidden.py  0031_remove_semester_classroom_url.py  0032_unit_reveal_at_level.py  0033_remove_unit_reveal_at_level.py  0034_alter_unitgroup_subject.py  0035_alter_unitgroup_subject.py  0036_auto_20210926_1226.py  0036_userprofile_last_seen.py  0037_auto_20210926_1141.py  0037_rename_last_announce_dismiss_userprofile_last_email_dismiss.py  (+47 more)
core/templatetags/: core_extras.py  otis_extras.py
core/tests/: test_models.py
dashboard/: admin.py  apps.py  factories.py  forms.py  levelsys.py  models.py  requirements.txt  tests.py  urls.py  utils.py  views.py
dashboard/migrations/: 0001_initial.py  0001_squashed_0085_alter_pset_staff_comments.py  0002_auto_20170810_2207.py  0003_auto_20170810_2209.py  0004_auto_20170813_1040.py  0005_uploadedfile_created_at.py  0006_auto_20170813_1057.py  0007_auto_20170813_1138.py  0008_auto_20170814_2138.py  0009_auto_20170818_1605.py  0010_uploadedfile_description.py  0011_auto_20181206_1148.py  0012_auto_20190327_1911.py  0013_auto_20190817_2254.py  0014_semesterdownloadfile.py  0015_problemsuggestion.py  0016_problemsuggestion_created_at.py  0017_auto_20210130_1306.py  0018_problemsuggestion_acknowledge.py  0019_auto_20210130_2059.py  0020_problemsuggestion_notified.py  (+70 more)
exams/: admin.py  apps.py  calculator.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
fixtures/: README.md  all.json  core.Unit.json  core.UnitGroup.json  dump-all.sh  gen-dummy-data.sh  load-all.sh  load-dummy-data.sh  populate.py  rpg.Level.json
hacks/: diamonds.py
hanabi/: admin.py  apps.py  factories.py  models.py  tests.py  urls.py  views.py
log_discord_otis/: __init__.py
markets/: admin.py  apps.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
mouse/: apps.py  forms.py  tests.py  urls.py  views.py
oime/: admin.py  apps.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
opal/: admin.py  apps.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
otisweb/: decorators.py  forms.py  mixins.py  settings.py  tests.py  testsuite.py  urls.py  utils.py  views.py  wsgi.py
otisweb_testsuite/: __init__.py  faker.py  fixtures.py  testcase.py
payments/: admin.py  factories.py  models.py  tests.py  urls.py  views.py
roster/: admin.py  apps.py  country_abbrevs.py  factories.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
rpg/: admin.py  apps.py  factories.py  forms.py  levelsys.py  models.py  tests.py  urls.py  views.py
suggestions/: admin.py  apps.py  factories.py  models.py  tests.py  urls.py  views.py
tubes/: admin.py  apps.py  factories.py  forms.py  models.py  test_oime.py  tests.py  tests_oime.py  urls.py  views.py
wikihaxx/: apps.py  factories.py  settings.py  tests.py  urls.py  views.py  wiki_plugin.py
zvhaxx/: diamonds.py
(+544 files in other folders)
