[project]
name = "otisweb"
version = "1.9.0"
description = "OTIS-WEB Course Management System"
authors = [{ name = "Evan Chen", email = "evan@evanchen.cc" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13, <4.0"

dependencies = [
  "Django>=5.2.11,<6.0.0",
  "PyMySQL>=1.1.2,<2.0.0",
  "Unidecode",
  "crispy-bootstrap5",
  "django-allauth[socialaccount]",
  "django-bootstrap5",
  "django-bot-rickroll",
  "django-braces",
  "django-crispy-forms",
  "django-debug-toolbar",
  "django-discordo",
  "django-extensions",
  "django-hijack",
  "django-import-export",
  "django-markdownfield",
  "django-markdownify",
  "django-positions",
  "django-qr-code",
  "django-registration",
  "django-reversion",
  "django-sql-utils",
  "django-storages[google]",
  "django-stubs>=5.2.2,<6.0.0",
  "django-stubs-ext>=5.2.2,<6.0.0",
  "mysqlclient>=2.2.8,<3.0.0",
  "prettytable",
  "pyparsing",
  "python-dotenv",
  "setuptools",
  "stripe==5.5.0",
  "wheel",
  "wiki",
]

[dependency-groups]
dev = [
  "Faker>=33.3.1,<34.0.0",
  "codespell",
  "coverage[toml]",
  "djlint",
  "factory-boy",
  "freezegun",
  "ipython",
  "jedi",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-xdist",
  "pyright",
  "ruff",
  "tblib",
  "toml",
  "types-Markdown",
  "types-freezegun",
  "types-requests",
  "werkzeug",
  "prek",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "otisweb.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["."]
addopts = "--reuse-db"

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.coverage.run]
branch = true
omit = [
  "**/site-packages/**",
  "*/migrations/*",
  "otisweb_testsuite/**",
  "manage.py",
  "*/admin.py",
  "fixtures/gen-dummy-data.sh",
]

[tool.pyright]
enableTypeIgnoreComments = true
exclude = ["**/node_modules", "**/typings", "**/__pycache__", ".git", "venv", ".venv", "**/migrations", "**/tests.py"]
pythonPlatform = "Linux"
pythonVersion = "3.13"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true

reportAssertAlwaysTrue = "error"
reportCallInDefaultInitializer = "warning"
reportConstantRedefinition = "none"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "none"
reportGeneralTypeIssues = "error"
reportImplicitStringConcatenation = "none"
reportImportCycles = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportIncompleteStub = "none"
reportInvalidStringEscapeSequence = "error"
reportInvalidTypeVarUse = "warning"
reportMissingImports = "error"
reportMissingModuleSource = "warning"
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportOptionalCall = "error"
reportOptionalContextManager = "error"
reportOptionalIterable = "error"
reportOptionalMemberAccess = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
reportOverlappingOverload = "error"
reportPrivateUsage = "error"
reportPropertyTypeMismatch = "error"
reportSelfClsParameterName = "warning"
reportTypedDictNotRequiredAccess = "warning"
reportUnboundVariable = "error"
reportUndefinedVariable = "error"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "error"
reportUnknownVariableType = "none"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryIsInstance = "error"
reportUntypedBaseClass = "none"
reportUntypedClassDecorator = "none"
reportUntypedFunctionDecorator = "none"
reportUntypedNamedTuple = "error"
reportUnusedCallResult = "none"
reportUnusedClass = "error"
reportUnusedCoroutine = "error"
reportUnusedFunction = "error"
reportUnusedImport = "warning"
reportUnusedVariable = "error"
reportWildcardImportFromLibrary = "warning"
strictDictionaryInference = false
strictListInference = false
strictParameterNoneValue = false
strictSetInference = false

[tool.codereviewdoctor]
disable = ["tall-model", "missing-related-name", "checking-settings-debug", "nullable-string-field"]

[tool.codespell]
skip = "roster/country_abbrevs.py,*/migrations/*.py,uv.lock"
count = ""
quiet-level = 3
ignore-words-list = "assertIn"

[tool.djlint]
profile = "django"
indent = 2
ignore = "D018,H006,H013,H021"
format_css = true
format_js = true

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "I", "DJ"]
