[project]
name = "otisweb"
version = "1.9.0"
description = "OTIS-WEB Course Management System"
authors = [{ name = "Evan Chen", email = "evan@evanchen.cc" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13, <4.0"

dependencies = [
  "Django>=5.2.13,<6.0.0",
  "Unidecode>=1.4.0",
  "crispy-bootstrap5>=2026.3",
  "django-allauth[socialaccount]>=65.16.1",
  "django-bootstrap5>=26.2",
  "django-bot-rickroll>=0.3.1",
  "django-braces>=1.17.0",
  "django-crispy-forms>=2.6",
  "django-debug-toolbar>=6.3.0",
  "django-discordo>=1.0.0",
  "django-extensions>=4.1",
  "django-hijack>=3.7.8",
  "django-import-export>=4.4.1",
  "django-markdownfield>=0.20.0",
  "django-markdownify>=0.9.6",
  "django-positions>=0.6.0",
  "django-qr-code>=4.2.0",
  "django-registration>=5.2.1",
  "django-reversion>=6.1.0",
  "django-sql-utils>=0.7.0",
  "django-storages[google]>=1.14.6",
  "django-stubs>=5.2.9,<6.0.0",
  "django-stubs-ext>=5.2.9,<6.0.0",
  "prettytable>=3.17.0",
  "pyparsing>=3.3.2",
  "python-dotenv>=1.2.2",
  "setuptools>=82.0.1",
  "stripe==5.5.0",
  "wheel>=0.47.0",
  "wiki>=0.12.2",
]

[project.optional-dependencies]
prod = [
  "mysqlclient>=2.2.8",
]

[dependency-groups]
dev = [
  "Faker>=40.15.0",
  "codespell>=2.4.2",
  "coverage[toml]>=7.13.5",
  "djlint>=1.36.4",
  "factory-boy>=3.3.3",
  "freezegun>=1.5.5",
  "ipython>=9.13.0",
  "jedi>=0.20.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-django>=4.12.0",
  "pytest-xdist>=3.8.0",
  "pyright>=1.1.409",
  "ruff>=0.15.12",
  "tblib>=3.2.2",
  "toml>=0.10.2",
  "types-Markdown>=3.10.2.20260408",
  "types-freezegun>=1.1.10",
  "types-requests>=2.33.0.20260503",
  "werkzeug>=3.1.8",
  "prek>=0.3.13",
]
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "otisweb.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["."]
addopts = "--reuse-db"

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.coverage.run]
branch = true
omit = [
  "**/site-packages/**",
  "*/migrations/*",
  "otisweb_testsuite/**",
  "manage.py",
  "*/admin.py",
  "fixtures/gen-dummy-data.sh",
]

[tool.pyright]
enableTypeIgnoreComments = true
exclude = ["**/node_modules", "**/typings", "**/__pycache__", ".git", "venv", ".venv", "**/migrations", "**/tests.py"]
pythonPlatform = "Linux"
pythonVersion = "3.13"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true

reportAssertAlwaysTrue = "error"
reportCallInDefaultInitializer = "warning"
reportConstantRedefinition = "none"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "none"
reportGeneralTypeIssues = "error"
reportImplicitStringConcatenation = "none"
reportImportCycles = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportIncompleteStub = "none"
reportInvalidStringEscapeSequence = "error"
reportInvalidTypeVarUse = "warning"
reportMissingImports = "error"
reportMissingModuleSource = "warning"
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportOptionalCall = "error"
reportOptionalContextManager = "error"
reportOptionalIterable = "error"
reportOptionalMemberAccess = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
reportOverlappingOverload = "error"
reportPrivateUsage = "error"
reportPropertyTypeMismatch = "error"
reportSelfClsParameterName = "warning"
reportTypedDictNotRequiredAccess = "warning"
reportUnboundVariable = "error"
reportUndefinedVariable = "error"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "error"
reportUnknownVariableType = "none"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryIsInstance = "error"
reportUntypedBaseClass = "none"
reportUntypedClassDecorator = "none"
reportUntypedFunctionDecorator = "none"
reportUntypedNamedTuple = "error"
reportUnusedCallResult = "none"
reportUnusedClass = "error"
reportUnusedCoroutine = "error"
reportUnusedFunction = "error"
reportUnusedImport = "warning"
reportUnusedVariable = "error"
reportWildcardImportFromLibrary = "warning"
strictDictionaryInference = false
strictListInference = false
strictParameterNoneValue = false
strictSetInference = false

[tool.codereviewdoctor]
disable = ["tall-model", "missing-related-name", "checking-settings-debug", "nullable-string-field"]

[tool.codespell]
skip = "roster/country_abbrevs.py,*/migrations/*.py,uv.lock"
count = ""
quiet-level = 3
ignore-words-list = "assertIn"

[tool.djlint]
profile = "django"
indent = 2
ignore = "D018,H006,H013,H021"
format_css = true
format_js = true

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "I", "DJ"]
